--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="home.css">
     </head>
   <body>
-    <audio src="sound.mp3" autoplay loop>
+    <audio src="sound.mp3" autoplay loop preload="auto">
     </audio>
     <h2><a href="index.html">Home</a>
     <a href="intr.html">Intr</a>
