--- a/intr.html
+++ b/intr.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="home.css">
   </head>
   <body>
-    <audio src="sound1.mp3" autoplay loop preload="auto"></audio>
+    <audio src="shttps://cj4207.github.io/1week/sound1.mp3" autoplay loop preload="auto"></audio>
     <h2><a href="index.html">Home</a>
     <a href="intr.html">Intr</a>
     <a href="info.html">Info</a></h2>
