--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="home.css">
     </head>
   <body>
-    <audio src="https://cj4207.github.io/1week/sound.mp3" autoplay loop preload="auto">
-    </audio>
+    <!--<audio src="https://cj4207.github.io/1week/sound.mp3" autoplay loop>
+    </audio>-->
+    <iframe src="sound.mp3" allow="autoplay"></iframe>
     <h2><a href="index.html">Home</a>
     <a href="intr.html">Intr</a>
     <a href="info.html">Info</a></h2>
