--- a/info.html
+++ b/info.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="home.css">
   </head>
   <body>
-    <audio src="https://cj4207.github.io/1week/sound2.mp3" autoplay loop preload="auto"></audio>
+    <!--<audio src="https://cj4207.github.io/1week/sound2.mp3" autoplay loop ></audio>
+    -->
+    <iframe src="sound2.mp3" allow="autoplay" style="display:none"></iframe>
     <h2><a href="index.html">Home</a>
     <a href="intr.html">Intr</a>
     <a href="info.html">Info</a></h2>
