--- a/index.html
+++ b/index.html
@@ -3,16 +3,47 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="css/home.css">
     </head>
   <body>
-    <!--<audio src="https://cj4207.github.io/1week/sound.mp3" autoplay loop>
-    </audio>-->
-    <iframe src="sound.mp3" allow="autoplay"></iframe>
-    <h2><a href="index.html">Home</a>
-    <a href="intr.html">Intr</a>
-    <a href="info.html">Info</a></h2>
-    <div class="b">
-    </div>
+      <div>
+        <section>
+          <a href="#home" id="home">
+            <h1>Home</h1>
+          </a>
+          <p><a href="home.html" class="h">21기 화이팅...</a></p>
+        </section>
+        <section>
+          <a href="#intro" id="intro">
+            <h1>Introduction</h1>
+          </a>
+          <p><a href="intr.html" class="h"><img src="https://www.gstatic.com/images/branding/product/1x/forms_2020q4_48dp.png" class="b"></a></p>
+        </section>
+        <section>
+          <a href="#info" id="info">
+            <h1>Profile</h1>
+          </a>
+          <p><a href="checkbox.html" class="h"><img src="image/profile.jpeg" class="b"></a></p>
+        </section>
+        <section>
+          <a href="#cont" id="cont">
+            <h1>Contact</h1>
+          </a>
+          <p>
+          <a href="https://www.instagram.com/bae_cccy" class="i">
+            <img src="image/insta.png" class="a">
+          </a>
+          <a href="mailto:cksdud1226e@gmail.com" class="i">
+            <img src="image/gmail.png" class="a">
+          </a>
+          <a href="https://github.com/cj4207" class="i">
+            <img src="image/github.png" class="a">
+          </a>
+          <a href="https://velog.io/@cj4207" class="i">
+            <img src="image/velog.jpg" class="a">
+          </a>
+        </p>
+        </section>
+      </div>
   </body>
 </html>
