--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Bae_Home</title>
     <link rel="stylesheet" href="css/home.css">
     </head>
   <body>
@@ -17,13 +17,13 @@
           <a href="#intro" id="intro">
             <h1>Introduction</h1>
           </a>
-          <p><a href="intr.html" class="h"><img src="https://www.gstatic.com/images/branding/product/1x/forms_2020q4_48dp.png" class="b"></a></p>
+          <p><a href="intro.html" class="h"><img src="https://www.gstatic.com/images/branding/product/1x/forms_2020q4_48dp.png" class="b"></a></p>
         </section>
         <section>
           <a href="#info" id="info">
             <h1>Profile</h1>
           </a>
-          <p><a href="checkbox.html" class="h"><img src="image/profile.jpeg" class="b"></a></p>
+          <p><a href="profile.html" class="h"><img src="image/profile.jpeg" class="b"></a></p>
         </section>
         <section>
           <a href="#cont" id="cont">
